cleaned up beginning section headers

--- a/flux-entropy-paper/flux-entropy-paper.tex
+++ b/flux-entropy-paper/flux-entropy-paper.tex
@@ -120,7 +120,7 @@
 %   \url{http://acm.org/about/class/1998/} for the full list of ACM
 %   classifiers. This section is required.}{}{}
 
-\section{General comments}
+%\section{General comments}
 
 % \begin{itemize}
 % \item we should be clear (and careful) where we're talking about
@@ -136,8 +136,6 @@
 %   program stuff and tries to make some quantitative sense out of it
 %   post-hoc.
 % \end{itemize}
-
-\section{Introduction}
 
 \begin{figure*}
   \centering
